--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
-    {% if page.mathjax %}
-        {% include mathjax.html %}
+    {% if page.katex %}
+        {% include katex.html %}
     {% endif %}
 </script>
 </head>
