--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,12 @@ layout: default
       </time>
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
+      {%- endif -%}
+      {% capture number_of_words %}
+        {{ page.content | number_of_words }}
+      {% endcapture %}
+        • <span> {{ number_of_words | divided_by: 200 | append: "min read" }} </span>
+    </p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
