--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -10,14 +10,14 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark: darken($grey-color, 25%);
 
 $green-color: rgb(18, 80, 45);
-$blue-color-light: rgb(248, 248, 248);
-$blue-color-dark: rgb(10, 40, 50);
+$off-white-color: rgb(248, 248, 248);
+$blue-color-dark: rgb(40, 70, 80);
 $pink-color: rgb(200, 80, 130);
 
 // Width of the content area
-$content-width: 1050px;
+$content-width: 900px;
 $on-palm: 600px;
-$on-laptop: 1050px;
+$on-laptop: 900px;
 
 /**
  * Basic styling
@@ -60,24 +60,24 @@ body {
 /**
  * Code formatting
  */
-pre,
-code {
-    border: 1px solid lighten($grey-color, 35%);
-    border-radius: 5px;
-    font-family: $mono-font-family;
-}
 
 code {
     font-family: $mono-font-family;
+    // font-weight: bold;
     border: 1px solid lighten($grey-color, 35%);
-    padding: 1px 5px;
+    border-radius: 3px;
+    padding: 1px 3px;
 }
 
 pre {
+    border: 1px solid lighten($grey-color, 35%);
+    border-radius: 5px;
+
     padding: 8px 12px;
     overflow-x: auto;
 
     > code {
+        font-family: $mono-font-family;
         border: 0;
         padding-right: 0;
         padding-left: 0;
@@ -97,7 +97,7 @@ figure {
 
     img {
         padding-bottom: 20px;
-        width: 85%;
+        width: 92%;
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -116,12 +116,12 @@ figure {
  * Syntax highlighting styles
  */
 .highlighter-rouge {
-    background-color: $blue-color-light;
+    background-color: white;
     .highlight {
-        background-color: $blue-color-light;
+        background-color: $off-white-color;
     }
     * {
-        background-color: $blue-color-light;
+        background-color: $off-white-color;
     }
 }
 
@@ -129,9 +129,10 @@ figure {
  * Site header
  */
 .site-header {
-    border-top: 5px solid darken($blue-color-dark, 10%);
+    @include relative-font-size(1.25);
+    border-top: 2px solid darken($blue-color-dark, 10%);
     border-bottom: 2px solid lighten($blue-color-dark, 10%);
-    min-height: $spacing-unit * 1.55;
+    min-height: $spacing-unit * 1.5;
     background-color: $blue-color-dark;
 
     // Positioning context for the mobile navigation icon
@@ -139,9 +140,9 @@ figure {
 }
 
 .site-title {
-    @include relative-font-size(1.25);
+    @include relative-font-size(1.65);
     font-weight: 300;
-    line-height: $base-line-height * $base-font-size * 1.75;
+    line-height: $base-line-height * $base-font-size * 1.65;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
@@ -306,13 +307,11 @@ figure {
 }
 
 .page-heading {
-    @include relative-font-size(2);
-    color: $pink-color;
+    @include relative-font-size(1.5);
 }
 
 .post-list-heading {
-    @include relative-font-size(2);
-    color: $pink-color;
+    @include relative-font-size(1.5);
 }
 
 .post-list {
@@ -335,10 +334,10 @@ figure {
 
 .post-link {
     display: block;
-    color: $green-color;
-    &:visited {
-        color: darken($green-color, 5%);
-    }
+    // color: $grey-color;
+    // &:visited {
+    //     color: darken($grey-color, 15%);
+    // }
     @include relative-font-size(1.65);
     font-family: $serif-font-family;
 }
@@ -352,7 +351,7 @@ figure {
 
 .post-title {
     @include relative-font-size(2.625);
-    color: $green-color;
+    // color: $green-color;
     font-family: $serif-font-family;
     letter-spacing: -1px;
     line-height: 1;
