--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 
   <h1 class="page-heading">{{ page.title | escape }}</h1>
 
-  <div class="post-content">
+  <div class="page-content">
     {{ content }}
   </div>
 
