--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,18 +15,20 @@ layout: default
     <h1 class="post-list-heading">{{ page.list_title | default: "Blog" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
-      <li>
-        <h3 style="margin-bottom: 0px;">
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
+        {% if post.publish %}
+        <li>
+          <h3 style="margin-bottom: 0px;">
+            <a class="post-link" href="{{ post.url | relative_url }}">
+              {{ post.title | escape }}
+            </a>
+          </h3>
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          <span class="post-meta">{{ post.date | date: date_format }}</span>
+          {%- if site.show_excerpts -%}
+            {{ post.excerpt }}
+          {%- endif -%}
+        </li>
+        {% endif %}
       {%- endfor -%}
     </ul>
 
