--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,14 @@
----
-layout: default
----
-<article class="post">
-
-  <h1 class="page-heading">{{ page.title | escape }}</h1>
-
-  <div class="page-content">
-    {{ content }}
-  </div>
-
-</article>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+{% include head.html %}
+<body>
+    <main>
+        {% include header.html %}
+        <article>
+            <h1>{{ page.title }}</h1>
+            {{ content }}
+        </article>
+    </main>
+    {% include footer.html %}
+</body>
+</html>
