--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,5 +1,5 @@
 <figure>
-    <img src="{{ include.img }}" style="width:{{ include.width }}"/>
+    <img src="{{ include.img }}" style="width: {{ include.width }};"/>
     <figcaption>
         <div class="caption">
             {{ include.caption }}
